Quorum3/Library/Tests/TypeCheckerGenerated/Pass/RetAssignBooleanBooleanField.quorum
class Main
    boolean v = Test()
    action Main
        if v = true
            output "passed"
        end
    end

    action Test() returns boolean
        boolean var = true
        return var
    end
end