Quorum3/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanIntegerField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        integer var = 5
        return var
    end
end